==> xinliu0260/Autopilot/target/sapu-fixwing-template/board/drv_usart_v2.c <==
#include "board.h"
#include "drivers/dev_serial_v2.h"
#include "drv_usart_v2_private.h"
#include "rttypes.h"
#include "drv_usart_v2.h"
#define DBG_TAG              "drv.usart"
#define DBG_LVL               DBG_INFO
#include <rtdbg.h>

static rt_err_t stm32_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    struct stm32_uart *uart;
    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = rt_container_of(serial, struct stm32_uart, serial);
    uart->handle.Instance          = uart->config->Instance;
    uart->handle.Init.BaudRate     = cfg->baud_rate;
    uart->handle.Init.Mode         = UART_MODE_TX_RX;
#ifdef USART_CR1_OVER8
    uart->handle.Init.OverSampling = cfg->baud_rate > 5000000 ? UART_OVERSAMPLING_8 : UART_OVERSAMPLING_16;
#else
    uart->handle.Init.OverSampling = UART_OVERSAMPLING_16;
#endif /* USART_CR1_OVER8 */

    switch (cfg->data_bits)
    {
    case DATA_BITS_8:
        if (cfg->parity == PARITY_ODD || cfg->parity == PARITY_EVEN)
            uart->handle.Init.WordLength = UART_WORDLENGTH_9B;
        else
            uart->handle.Init.WordLength = UART_WORDLENGTH_8B;
        break;
    case DATA_BITS_9:
        uart->handle.Init.WordLength = UART_WORDLENGTH_9B;
        break;
    default:
        uart->handle.Init.WordLength = UART_WORDLENGTH_8B;
        break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_1:
        uart->handle.Init.StopBits   = UART_STOPBITS_1;
        break;
    case STOP_BITS_2:
        uart->handle.Init.StopBits   = UART_STOPBITS_2;
        break;
    default:
        uart->handle.Init.StopBits   = UART_STOPBITS_1;
        break;
    }

    switch (cfg->parity)
    {
    case PARITY_NONE:
        uart->handle.Init.Parity     = UART_PARITY_NONE;
        break;
    case PARITY_ODD:
        uart->handle.Init.Parity     = UART_PARITY_ODD;
        break;
    case PARITY_EVEN:
        uart->handle.Init.Parity     = UART_PARITY_EVEN;
        break;
    default:
        uart->handle.Init.Parity     = UART_PARITY_NONE;
        break;
    }

    switch (cfg->flowcontrol)
    {
        case RT_SERIAL_FLOWCONTROL_NONE:
            uart->handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
            break;
        case RT_SERIAL_FLOWCONTROL_CTSRTS:
            uart->handle.Init.HwFlowCtl = UART_HWCONTROL_RTS_CTS;
            break;
        default:
            uart->handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
            break;
    }

    uart->dma_rx.remaining_cnt = serial->config.rx_bufsz;

    if (HAL_UART_Init(&uart->handle) != HAL_OK)
    {
        return -RT_ERROR;
    }

    return RT_EOK;
}

static rt_err_t stm32_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct stm32_uart *uart;

    rt_ubase_t ctrl_arg = (rt_ubase_t)arg;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct stm32_uart, serial);

    if(ctrl_arg & (RT_DEVICE_FLAG_RX_BLOCKING | RT_DEVICE_FLAG_RX_NON_BLOCKING))
    {
        if (uart->uart_dma_flag & RT_DEVICE_FLAG_DMA_RX)
            ctrl_arg = RT_DEVICE_FLAG_DMA_RX;
        else
            ctrl_arg = RT_DEVICE_FLAG_INT_RX;
    }
    else if(ctrl_arg & (RT_DEVICE_FLAG_TX_BLOCKING | RT_DEVICE_FLAG_TX_NON_BLOCKING))
    {
        if (uart->uart_dma_flag & RT_DEVICE_FLAG_DMA_TX)
            ctrl_arg = RT_DEVICE_FLAG_DMA_TX;
        else
            ctrl_arg = RT_DEVICE_FLAG_INT_TX;
    }

    switch (cmd)
    {
    /* disable interrupt */
    case RT_DEVICE_CTRL_CLR_INT:

        NVIC_DisableIRQ(uart->config->irq_type);
        if (ctrl_arg == RT_DEVICE_FLAG_INT_RX)
            __HAL_UART_DISABLE_IT(&(uart->handle), UART_IT_RXNE);
        else if (ctrl_arg == RT_DEVICE_FLAG_INT_TX)
            __HAL_UART_DISABLE_IT(&(uart->handle), UART_IT_TXE);
        else if (ctrl_arg == RT_DEVICE_FLAG_DMA_RX)
        {
            __HAL_UART_DISABLE_IT(&(uart->handle), UART_IT_RXNE);

            HAL_NVIC_DisableIRQ(uart->config->dma_rx->dma_irq);
            if (HAL_DMA_Abort(&(uart->dma_rx.handle)) != HAL_OK)
            {
                RT_ASSERT(0);
            }

            if (HAL_DMA_DeInit(&(uart->dma_rx.handle)) != HAL_OK)
            {
                RT_ASSERT(0);
            }
        }
        else if(ctrl_arg == RT_DEVICE_FLAG_DMA_TX)
        {
            __HAL_UART_DISABLE_IT(&(uart->handle), UART_IT_TC);

            HAL_NVIC_DisableIRQ(uart->config->dma_tx->dma_irq);
            if (HAL_DMA_DeInit(&(uart->dma_tx.handle)) != HAL_OK)
            {
                RT_ASSERT(0);
            }
        }
        break;

    case RT_DEVICE_CTRL_SET_INT:

        HAL_NVIC_SetPriority(uart->config->irq_type, 1, 0);
        HAL_NVIC_EnableIRQ(uart->config->irq_type);

        if (ctrl_arg == RT_DEVICE_FLAG_INT_RX)
            __HAL_UART_ENABLE_IT(&(uart->handle), UART_IT_RXNE);
        else if (ctrl_arg == RT_DEVICE_FLAG_INT_TX)
            __HAL_UART_ENABLE_IT(&(uart->handle), UART_IT_TXE);
        break;

    case RT_DEVICE_CTRL_CONFIG:
        if (ctrl_arg & (RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX))
        {
            stm32_dma_config(serial, ctrl_arg);
        }
        else
            stm32_control(serial, RT_DEVICE_CTRL_SET_INT, (void *)ctrl_arg);
        break;

    case RT_DEVICE_CHECK_OPTMODE:
        {
            if (ctrl_arg & RT_DEVICE_FLAG_DMA_TX)
                return RT_SERIAL_TX_BLOCKING_NO_BUFFER;
            else
                return RT_SERIAL_TX_BLOCKING_BUFFER;
        }
    case RT_DEVICE_CTRL_CLOSE:
        if (HAL_UART_DeInit(&(uart->handle)) != HAL_OK )
        {
            RT_ASSERT(0)
        }
        break;

    }
    return RT_EOK;
}

static int stm32_putc(struct rt_serial_device *serial, char c)
{
    struct stm32_uart *uart;
    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct stm32_uart, serial);
    UART_INSTANCE_CLEAR_FUNCTION(&(uart->handle), UART_FLAG_TC);
    UART_SET_TDR(&uart->handle, c);
    while (__HAL_UART_GET_FLAG(&(uart->handle), UART_FLAG_TC) == RESET);

    return 1;
}

static int stm32_getc(struct rt_serial_device *serial)
{
    int ch;
    struct stm32_uart *uart;
    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct stm32_uart, serial);

    ch = -1;
    if (__HAL_UART_GET_FLAG(&(uart->handle), UART_FLAG_RXNE) != RESET)
        ch = UART_GET_RDR(&uart->handle, stm32_uart_get_mask(uart->handle.Init.WordLength, uart->handle.Init.Parity));
    return ch;
}

static rt_ssize_t stm32_transmit(struct rt_serial_device     *serial,
                                       rt_uint8_t           *buf,
                                       rt_size_t             size,
                                       rt_uint32_t           tx_flag)
{
    struct stm32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(buf != RT_NULL);
    uart = rt_container_of(serial, struct stm32_uart, serial);

    if (uart->uart_dma_flag & RT_DEVICE_FLAG_DMA_TX)
    {
		
		#if defined (__DCACHE_PRESENT) && (__DCACHE_PRESENT == 1U)
        SCB_CleanDCache_by_Addr((void*)buf, size);
		#endif
        HAL_UART_Transmit_DMA(&uart->handle, buf, size);
        return size;
    }

    stm32_control(serial, RT_DEVICE_CTRL_SET_INT, (void *)tx_flag);

    return size;
}

void USART1_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART1_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
}

void USART2_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART2_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
}

void USART3_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART3_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
}

void UART4_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART4_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
}

void UART5_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART5_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
}

void USART6_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART6_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
}

void UART7_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART7_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
}

void UART8_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART8_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
}

int rt_hw_usart_init(void)
{
    rt_err_t result = 0;
    // uart1 
    {
        static struct dma_config dma_rx = UART1_DMA_RX_CONFIG;
        uart_config[UART1_INDEX].dma_rx = &dma_rx;
        uart_obj[UART1_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_RX ;

        static struct dma_config dma_tx = UART1_DMA_TX_CONFIG;
        uart_config[UART1_INDEX].dma_tx = &dma_tx;
        uart_obj[UART1_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_TX ;

        uart_obj[UART1_INDEX].config = &uart_config[UART1_INDEX];
       
        struct serial_configure serial_config = UART1_SERIAL_USER_CONFIGS;
        uart_obj[UART1_INDEX].serial.config = serial_config;
        uart_obj[UART1_INDEX].serial.ops = &stm32_uart_ops;

        result = rt_hw_serial_register(&uart_obj[UART1_INDEX].serial,
                                        uart_obj[UART1_INDEX].config->name, 
                                        RT_DEVICE_FLAG_RDWR, 
                                        RT_NULL);
        RT_ASSERT(result == RT_EOK);
    }
    //uart2
    {
        static struct dma_config dma_rx = UART2_DMA_RX_CONFIG;
        uart_config[UART2_INDEX].dma_rx = &dma_rx;
        uart_obj[UART2_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_RX ;

        static struct dma_config dma_tx = UART2_DMA_TX_CONFIG;
        uart_config[UART2_INDEX].dma_tx = &dma_tx;
        uart_obj[UART2_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_TX ;

        uart_obj[UART2_INDEX].config = &uart_config[UART2_INDEX];

        struct serial_configure serial_config = UART2_SERIAL_USER_CONFIGS;
        uart_obj[UART2_INDEX].serial.config = serial_config;
        uart_obj[UART2_INDEX].serial.ops = &stm32_uart_ops;

        result = rt_hw_serial_register(&uart_obj[UART2_INDEX].serial,
                                        uart_obj[UART2_INDEX].config->name, 
                                        RT_DEVICE_FLAG_RDWR, 
                                        RT_NULL);
        RT_ASSERT(result == RT_EOK);
    }
    //uart5
    {
        static struct dma_config dma_rx = UART5_DMA_RX_CONFIG;
        uart_config[UART5_INDEX].dma_rx = &dma_rx;
        uart_obj[UART5_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_RX ;

        // static struct dma_config dma_tx = UART5_DMA_TX_CONFIG;
        // uart_config[UART5_INDEX].dma_tx = &dma_tx;
        // uart_obj[UART5_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_TX ;

        uart_obj[UART5_INDEX].config = &uart_config[UART5_INDEX];

        struct serial_configure serial_config = UART5_SERIAL_USER_CONFIGS;
        uart_obj[UART5_INDEX].serial.config = serial_config;
        uart_obj[UART5_INDEX].serial.ops = &stm32_uart_ops;

        result = rt_hw_serial_register(&uart_obj[UART5_INDEX].serial,
                                        uart_obj[UART5_INDEX].config->name, 
                                        RT_DEVICE_FLAG_RDONLY,
                                        RT_NULL);
        RT_ASSERT(result == RT_EOK);
    }
    //uart6
    {
        static struct dma_config dma_rx = UART6_DMA_RX_CONFIG;
        uart_config[UART6_INDEX].dma_rx = &dma_rx;
        uart_obj[UART6_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_RX ;

        static struct dma_config dma_tx = UART6_DMA_TX_CONFIG;
        uart_config[UART6_INDEX].dma_tx = &dma_tx;
        uart_obj[UART6_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_TX ;

        uart_obj[UART6_INDEX].config = &uart_config[UART6_INDEX];

        struct serial_configure serial_config = UART6_SERIAL_USER_CONFIGS;
        uart_obj[UART6_INDEX].serial.config = serial_config;
        uart_obj[UART6_INDEX].serial.ops = &stm32_uart_ops;

        result = rt_hw_serial_register(&uart_obj[UART6_INDEX].serial,
                                        uart_obj[UART6_INDEX].config->name, 
                                        RT_DEVICE_FLAG_RDWR, 
                                        RT_NULL);
        RT_ASSERT(result == RT_EOK);
    }
    //uart8
    {
        static struct dma_config dma_rx = UART8_DMA_RX_CONFIG;
        uart_config[UART8_INDEX].dma_rx = &dma_rx;
        uart_obj[UART8_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_RX ;

        static struct dma_config dma_tx = UART8_DMA_TX_CONFIG;
        uart_config[UART8_INDEX].dma_tx = &dma_tx;
        uart_obj[UART8_INDEX].uart_dma_flag |= RT_DEVICE_FLAG_DMA_TX ;

        uart_obj[UART8_INDEX].config = &uart_config[UART8_INDEX];

        struct serial_configure serial_config = UART8_SERIAL_USER_CONFIGS;
        uart_obj[UART8_INDEX].serial.config = serial_config;
        uart_obj[UART8_INDEX].serial.ops = &stm32_uart_ops;

        result = rt_hw_serial_register(&uart_obj[UART8_INDEX].serial,
                                        uart_obj[UART8_INDEX].config->name, 
                                        RT_DEVICE_FLAG_RDWR, 
                                        RT_NULL);
        RT_ASSERT(result == RT_EOK);
    }
    return result;
}
